<package format="2">
	<name>settings</name>
	<version>1.2.4</version>
	<description>
		Setting for external funcunaletys.	
	</description>
	<maintainer email="samkar-4@student.ltu.se">grammers</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>catkin_simple</build_depend>

	<exec_depend>roscpp</exec_depend>
</package>
